--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -110,7 +110,7 @@
     <script src="https://dn-tmp.qbox.me/select2-4.0.0/dist/js/select2.full.min.js"></script>
     <script src="https://dn-tmp.qbox.me/summernote-0.6.9/summernote.min.js"></script>
     <script src="https://dn-tmp.qbox.me/summernote-0.6.9/lang/summernote-zh-CN.js"></script>
-    <script src="https://dn-tmp.qbox.me/xss-filters.1.2.4.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/js-xss.v0.2.2.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
     <script src="{{ STATIC_URL }}js/frontend/mixins-2b55fccd92.js">></script>
     <script src="{{ STATIC_URL }}js/frontend/normal/new_post-0f4ac6c051.js">></script>
